Fix Overflow Issue on iOS

--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 @font-face {
     font-family: 'SFProDisplay';
-    src: url(./fonts/sf-pro-display_regular.woff2)  format('woff2');
+    src: url(./fonts/sf-pro-display_regular.woff2) format('woff2');
 }
 
-*{
+* {
     box-sizing: border-box;
     font-family: 'SFProDisplay', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color:white;
+    color: white;
     font-weight: 500;
 }
 
-body{
+body {
     margin: 0px;
     height: 100vh;
     display: flex;
@@ -19,7 +19,7 @@ body{
     background-color: black;
 }
 
-#phone-mockup{
+#phone-mockup {
     width: 300px;
     height: 600px;
     border: 5px solid silver;
@@ -31,23 +31,25 @@ body{
     align-items: center;
 }
 
-#notch{
+#notch {
     margin: 12px 0px;
     width: 100px;
     height: 20px;
     border-radius: 30px;
-    background-color:grey;
+    background-color: grey;
 }
 
-#calculator{
+#calculator {
+    width: 290px;
     display: flex;
     flex-wrap: wrap;
     margin-top: auto;
     justify-content: space-between;
+    padding: 10px;
 }
 
 #display-container,
-#display-history-container{
+#display-history-container {
     text-align: right;
     margin: 5px;
     width: 270px;
@@ -58,7 +60,7 @@ body{
     align-items: center;
 }
 
-#display-history{
+#display-history {
     font-size: 25px;
     color: rgba(255, 255, 255, 0.5);
 }
@@ -67,43 +69,41 @@ body{
     font-size: 50px;
 }
 
-button{
-    height: 65px;
-    width: 65px;
+button {
+    height: 60px;
+    width: 60px;
     border-radius: 50%;
     border: none;
     font-size: 40px;
-    flex-shrink: 0;
-    flex-grow: 0;
+    margin: 3px 0px;
 }
 
 #clear-button,
-#delete-button
-{
+#delete-button {
     height: 60px;
-    width: 135px;
+    width: 130px;
     border-radius: 30px;
     background-color: #9e9e9e;
     color: black;
 }
 
-.operators{
+.operators {
     background-color: #f69806;
     padding-bottom: 5px;
 }
 
 .numbers,
 #equals-button,
-#point-button{
+#point-button {
     background-color: #303131;
 }
 
-#home-slider{
+#home-slider {
     height: 5px;
     width: 150px;
     background-color: rgba(255, 255, 255, 0.3);
     margin: 8px;
     border-radius: 10px;
     align-items: bottom;
-    order:2;
+    order: 2;
 }
